--- a/src/styles/hero.scss
+++ b/src/styles/hero.scss
@@ -37,6 +37,9 @@
           position: relative;
           z-index: 1;
           font-size: 20px;
+          @media (max-width: 768px) {
+            font-size: 16px;
+          }
         }
 
         .image {
@@ -48,11 +51,18 @@
           height: 30px;
           z-index: 2;
           mix-blend-mode: screen;
+          @media (max-width: 768px) {
+            width: 150px;
+            height: 20px;
+          }
         }
       }
 
       h1 {
         font-weight: 900;
+        @media (max-width: 768px) {
+          font-size: 2.5rem;
+        }
       }
 
     }
