--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -3,14 +3,18 @@
 header {
   background: $mainColor;
   .header-inner{
+    display: flex;
+    align-items: center;
+    color: $textColor;
+    height: 10vh;
+    width: 100%;
 
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  color: $textColor;
-  height: 15vh;
-  width: 100%;
-
+    .logo-nav-btn{
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      width: 100%;
+    }
   nav {
     a {
       margin: 0 2rem;
@@ -23,14 +27,12 @@ header {
   }
 
   .nav-btn {
-    // padding: 5px;
     cursor: pointer;
     background: transparent;
     border: none;
     outline: none;
     color: $textColor;
     visibility: hidden;
-    // opacity: 0;
     display: none;
   }
 
