Modify overlay to cover entire webpage

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,5 +8,11 @@
 body{
 
     font-family: "Titillium Web", sans-serif;
+    background-image: url(../img/hero-img.gif);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100vw;
+    height: 100vh;
 }
 
