--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -1,80 +1,86 @@
 @import "./variables";
 
 header {
-  background: $mainColor;
-  .header-inner{
-    display: flex;
-    align-items: center;
-    color: $textColor;
-    height: 10vh;
+  .overlay {
+    background: #000000CC;
     width: 100%;
+    height: 100%;
 
-    .logo-nav-btn{
+    .header-inner{
       display: flex;
       align-items: center;
-      justify-content: space-between;
-      width: 100%;
-    }
-  nav {
-    a {
-      margin: 0 2rem;
       color: $textColor;
-      text-decoration: none;
-      &:hover {
-        color: $secondaryColor;
+      height: 15vh;
+      width: 100%;
+  
+      .logo-nav-btn{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 100%;
+      }
+    nav {
+      a {
+        margin: 0 2rem;
+        color: $textColor;
+        text-decoration: none;
+        &:hover {
+          color: $secondaryColor;
+        }
+      }
+    }
+  
+    .nav-btn {
+      cursor: pointer;
+      background: transparent;
+      border: none;
+      outline: none;
+      color: $textColor;
+      visibility: hidden;
+      display: none;
+    }
+  
+    @media only screen and (max-width: 1024px) {
+      nav {
+        position: fixed;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 3rem;
+        background: $mainColor;
+        transition: 1s ease-out;
+        transform: translateY(-100vh);
+        z-index: 10;
+      }
+  
+      .nav-btn {
+        visibility: visible;
+        font-size: 1.5rem;
+        display: block;
+      }
+  
+      .nav-close-btn {
+        position: absolute;
+        top: 2rem;
+        right: 2rem;
+      }
+  
+      #support {
+        visibility: hidden;
+        opacity: 0;
+      }
+  
+      .responsive_nav {
+        transform: none;
       }
     }
   }
-
-  .nav-btn {
-    cursor: pointer;
-    background: transparent;
-    border: none;
-    outline: none;
-    color: $textColor;
-    visibility: hidden;
-    display: none;
   }
-
-  @media only screen and (max-width: 1024px) {
-    nav {
-      position: fixed;
-      top: 0;
-      left: 0;
-      height: 100%;
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      gap: 3rem;
-      background: $mainColor;
-      transition: 1s ease-out;
-      transform: translateY(-100vh);
-      z-index: 10;
-    }
-
-    .nav-btn {
-      visibility: visible;
-      font-size: 1.5rem;
-      display: block;
-    }
-
-    .nav-close-btn {
-      position: absolute;
-      top: 2rem;
-      right: 2rem;
-    }
-
-    #support {
-      visibility: hidden;
-      opacity: 0;
-    }
-
-    .responsive_nav {
-      transform: none;
-    }
-  }
-}
+ 
 }
 
