--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,5 @@
 @import "./hero.scss";
+@import "./knowUs.scss";
 @import "./navbar.scss";
 @import "./variables";
 @import 'bootstrap/dist/css/bootstrap.min.css';
