Modify media player to embed youtube iframe

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,6 @@
 @import "./hero.scss";
 @import "./knowUs.scss";
+@import "./mediaPlayer.scss";
 @import "./navbar.scss";
 @import "./variables";
 @import 'bootstrap/dist/css/bootstrap.min.css';
