--- a/src/styles/knowUs.scss
+++ b/src/styles/knowUs.scss
@@ -2,9 +2,8 @@
     width: 100vw;
     position: relative;
     padding: 2rem 1rem;
-    background-color: #00000000;
+    background-color: #171717;
     
-
     .knowUs-image {
         position: relative;
         padding-bottom: 2rem;
@@ -12,5 +11,9 @@
             height: 34rem;
             width: 22rem;
         }
+    }
+
+    .knowUs-text {
+        color: #FFFFFF;
     }
 }
