Modify code to remove bug in Navbar

--- a/src/styles/mediaPlayer.scss
+++ b/src/styles/mediaPlayer.scss
@@ -1,10 +1,11 @@
-.container {
+.containerMedia {
     background-color: #171717;
 
     .mediaPlayer {
         width: inherit;
         background-color:  #171717;
         padding-top: 2rem;
+        padding-bottom: 2rem;
        
     }
 
