--- a/src/styles/mediaPlayer.scss
+++ b/src/styles/mediaPlayer.scss
@@ -4,9 +4,9 @@
     .mediaPlayer {
         width: inherit;
         background-color:  #171717;
-        padding-top: 2rem;
-        padding-bottom: 2rem;
-       
+        padding: 2rem 0rem;
     }
-
+    
 }
+
+
