--- a/src/styles/hero.scss
+++ b/src/styles/hero.scss
@@ -1,3 +1,5 @@
+@import "./variables";
+
 .hero {
   width: 100vw;
   height: 85vh;
@@ -6,21 +8,21 @@
   .overlay{
     background: #000000CC;
     width: 100%;
-    height: 100%;
+    height: 85vh;
     position: absolute;
     z-index: 1;
     left: 0;
     top: 0;
 
     .hero-inner{
-      color: #fff;
+      color: $textColor;
       text-align: center;
       margin-top: 10%;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      width: 100%;
+      width: 100vw;
       height: fit-content;
       padding-top: 4rem;
 
