--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,8 @@
 @import "./knowUs.scss";
 @import "./mediaPlayer.scss";
 @import "./navbar.scss";
+@import "./productCard.scss";
+@import "./shop.scss";
 @import "./variables";
 @import 'bootstrap/dist/css/bootstrap.min.css';
 @import '~bootstrap/scss/bootstrap';
