--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,6 +9,12 @@
 @import '~bootstrap/scss/bootstrap';
 @import url("https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600&display=swap");
 
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 body{
 
     font-family: "Titillium Web", sans-serif;
