--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -5,14 +5,18 @@ header {
     background: #000000CC;
     width: 100%;
     height: 100%;
+    max-width: 100vw;
+    overflow-x: hidden;
 
     .header-inner{
       display: flex;
       align-items: center;
       color: $textColor;
-      height: 15vh;
+      height: 10vh;
+      min-height: 70px;
       width: 100%;
-  
+      padding: 0 1rem;
+
       .logo-nav-btn{
         display: flex;
         align-items: center;
@@ -20,32 +24,57 @@ header {
         width: 100%;
         
         .nav-shop {
-          margin-left: 15rem;
           display: flex;
           align-items: center;
+          margin-left: auto;
+          padding: 0 1rem;
+
           .user {
             cursor: pointer;
-            margin-right: 0.5rem;
+            margin-right: 1rem;
           }
   
           .cart {
             cursor: pointer;
           }
         }
+
+        > div:first-child {
+          img {
+            max-height: 40px;
+            width: auto;
+          }
+        }
+
+        //style for the container with support button
+        > div:last-child {
+          display: flex;
+          align-items: center;
+          
+          #support {
+            white-space: nowrap;
+            margin-left: 1rem;
+          }
+        }
       }
+
     nav {
+      display: flex;
+      align-items: center;
+
       a {
-        margin: 0 2rem;
+        margin: 0 1rem;
         color: $textColor;
         text-decoration: none;
+        font-size: 1rem;
+        white-space: nowrap;
+
         &:hover {
           color: $secondaryColor;
         }
       }
     }
     
-
-  
     .nav-btn {
       cursor: pointer;
       background: transparent;
@@ -54,51 +83,161 @@ header {
       color: $textColor;
       visibility: hidden;
       display: none;
+      font-size: 1.5rem;
     }
   
+    //Medium screens
+    @media only screen and (max-width: 1280px) {
+      .header-inner{
+        .logo-nav-btn{
+          nav {
+            a{
+              margin: 0 0.75rem;
+            }
+          }
+        }
+      }
+    }
+    
+    //Tablet screens
     @media only screen and (max-width: 1024px) {
-      nav {
-        position: fixed;
-        top: 0;
-        left: 0;
-        height: 100%;
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        gap: 3rem;
-        background: $mainColor;
-        transition: 1s ease-out;
-        transform: translateY(-100vh);
-        z-index: 10;
-      }
-  
-      .nav-btn {
-        margin-top: 2rem;
-        margin-left: 2rem;
-        visibility: visible;
-        font-size: 1.5rem;
-        display: block;
-      }
-  
-      .nav-close-btn {
-        position: absolute;
-        top: 2rem;
-        right: 2rem;
-      }
-  
-      #support {
-        visibility: hidden;
-        opacity: 0;
-      }
-  
-      .responsive_nav {
-        transform: none;
+      .header-inner{
+       padding: 0 1rem;
+
+        .logo-nav-btn{
+          .nav-shop {
+            margin-left: 0;
+          }
+        }
+
+        nav{ 
+          position: fixed;
+          top: 0;
+          left: 0;
+          height: 100%;
+          width: 100%;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          gap: 3rem;
+          background: $mainColor;
+          transition: 0.3s ease-in-out;
+          transform: translateY(-100vh);
+          z-index: 10;
+
+          a {
+            font-size: 1.25rem;
+            margin: 0;
+          }
+        }
+
+        .nav-btn {
+          visibility: visible;
+          display: block;
+        }
+
+        .nav-close-btn {
+          position: absolute;
+          top: 2rem;
+          right: 2rem;
+        }
+
+        #support {
+          display: none !important;
+          visibility: hidden !important;
+          opacity: 0 !important;
+          height: 0 !important;
+          margin: 0 !important;
+          padding: 0 !important;
+          position: absolute !important;
+          pointer-events: none !important;
+          overflow: hidden !important;
+        }
+
+        .responsive_nav {
+          transform: none;
+        }
       }
     }
+  
+    //Mobile screens
+    @media only screen and (max-width: 768px) {
+      .header-inner{
+        height: 8vh;
+        min-height: 60px;
+
+        .logo-nav-btn{
+          >div:first-child {
+            img {
+              max-height: 32px;
+            }
+          }
+          nav-shop {
+            .user, .cart{
+              transform: scale(0.9);
+            }
+          }
+        }
+      }
+    }
+
+    //Small mobile screens
+    @media only screen and (max-width: 480px) {
+      .header-inner{
+        padding: 0 0.5rem;
+
+        .logo-nav-btn{
+          .nav-btn{
+            font-size: 1.25rem;
+          }
+        }
+      }
+    }
+
+    // @media only screen and (max-width: 1024px) {
+    //   nav {
+    //     position: fixed;
+    //     top: 0;
+    //     left: 0;
+    //     height: 100%;
+    //     width: 100%;
+    //     display: flex;
+    //     flex-direction: column;
+    //     align-items: center;
+    //     justify-content: center;
+    //     gap: 3rem;
+    //     background: $mainColor;
+    //     transition: 1s ease-out;
+    //     transform: translateY(-100vh);
+    //     z-index: 10;
+    //   }
+  
+    //   .nav-btn {
+    //     margin-top: 2rem;
+    //     margin-left: 2rem;
+    //     visibility: visible;
+    //     font-size: 1.5rem;
+    //     display: block;
+    //   }
+  
+    //   .nav-close-btn {
+    //     position: absolute;
+    //     top: 2rem;
+    //     right: 2rem;
+    //   }
+  
+    //   #support {
+    //     visibility: hidden;
+    //     opacity: 0;
+    //   }
+  
+    //   .responsive_nav {
+    //     transform: none;
+    //   }
+    // }
   }
-  }
+}
  
 }
 
