--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -1,32 +1,26 @@
 @import "./variables";
 
 header {
-  .overlay {
-    background: #000000CC;
-    width: 100%;
-    height: 100%;
-    max-width: 100vw;
-    overflow-x: hidden;
+  background: #000000CC;
+  width: 100%;
+  height: 10vh;
+  min-height: 70px;
+  max-width: 100vw;
 
-    .header-inner{
+    .header-content{
       display: flex;
       align-items: center;
       color: $textColor;
+      width: 100%;
       height: 10vh;
       min-height: 70px;
-      width: 100%;
+      max-width: 100vw;
       padding: 0 1rem;
-
-      .logo-nav-btn{
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        width: 100%;
+      justify-content: space-between;
         
         .nav-shop {
           display: flex;
           align-items: center;
-          margin-left: auto;
           padding: 0 1rem;
 
           .user {
@@ -38,25 +32,9 @@ header {
             cursor: pointer;
           }
         }
-
-        > div:first-child {
-          img {
-            max-height: 40px;
-            width: auto;
-          }
-        }
-
-        //style for the container with support button
-        > div:last-child {
-          display: flex;
-          align-items: center;
           
-          #support {
-            white-space: nowrap;
-            margin-left: 1rem;
-          }
-        }
       }
+      
 
     nav {
       display: flex;
@@ -195,49 +173,49 @@ header {
       }
     }
 
-    // @media only screen and (max-width: 1024px) {
-    //   nav {
-    //     position: fixed;
-    //     top: 0;
-    //     left: 0;
-    //     height: 100%;
-    //     width: 100%;
-    //     display: flex;
-    //     flex-direction: column;
-    //     align-items: center;
-    //     justify-content: center;
-    //     gap: 3rem;
-    //     background: $mainColor;
-    //     transition: 1s ease-out;
-    //     transform: translateY(-100vh);
-    //     z-index: 10;
-    //   }
+    @media only screen and (max-width: 1024px) {
+      nav {
+        position: fixed;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 3rem;
+        background: $mainColor;
+        transition: 0.3s ease-in-out;
+        transform: translateY(-100vh);
+        z-index: 10;
+      }
   
-    //   .nav-btn {
-    //     margin-top: 2rem;
-    //     margin-left: 2rem;
-    //     visibility: visible;
-    //     font-size: 1.5rem;
-    //     display: block;
-    //   }
+      .nav-btn {
+        margin-top: 2rem;
+        margin-left: 2rem;
+        visibility: visible;
+        font-size: 1.5rem;
+        display: block;
+      }
   
-    //   .nav-close-btn {
-    //     position: absolute;
-    //     top: 2rem;
-    //     right: 2rem;
-    //   }
+      .nav-close-btn {
+        position: absolute;
+        top: 2rem;
+        right: 2rem;
+      }
   
-    //   #support {
-    //     visibility: hidden;
-    //     opacity: 0;
-    //   }
+      #support {
+        visibility: hidden;
+        opacity: 0;
+      }
   
-    //   .responsive_nav {
-    //     transform: none;
-    //   }
-    // }
+      .responsive_nav {
+        transform: none;
+      }
+    }
   }
-}
+
  
-}
+
 
