--- a/src/styles/hero.scss
+++ b/src/styles/hero.scss
@@ -1,14 +1,19 @@
 @import "./variables";
 
 .hero {
+  background-image: url(../img/hero-img.gif);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
   width: 100vw;
-  height: 85vh;
+  height: 100vh;
+  border: 2px solid red;
   position: relative;
 
   .overlay{
     background: #000000CC;
     width: 100%;
-    height: 85vh;
+    height: 100%;
     position: absolute;
     z-index: 1;
     left: 0;
@@ -60,6 +65,16 @@
         font-weight: 900;
         @media (max-width: 768px) {
           font-size: 2.5rem;
+        }
+      }
+
+      .hero-text {
+        font-size: 1.5rem;
+        margin-top: 1rem;
+        font-weight: 400;
+        text-wrap: wrap;
+        @media (max-width: 768px) {
+          font-size: 1rem;
         }
       }
 
