--- a/src/styles/hero.scss
+++ b/src/styles/hero.scss
@@ -7,8 +7,8 @@
   background-position: center;
   width: 100vw;
   height: 100vh;
-  border: 2px solid red;
   position: relative;
+  overflow: hidden;
 
   .overlay{
     background: #000000CC;
