--- a/src/styles/hero.scss
+++ b/src/styles/hero.scss
@@ -5,10 +5,13 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   position: relative;
   overflow: hidden;
+  @media (max-width: 768px) {
+    height: 70vh;
+  }
 
   .overlay{
     background: #000000CC;
@@ -69,12 +72,11 @@
       }
 
       .hero-text {
-        font-size: 1.5rem;
+        font-size: 1rem;
         margin-top: 1rem;
-        font-weight: 400;
-        text-wrap: wrap;
         @media (max-width: 768px) {
-          font-size: 1rem;
+          font-weight: 400;
+          text-wrap: wrap;
         }
       }
 
