--- a/src/styles/knowUs.scss
+++ b/src/styles/knowUs.scss
@@ -1,16 +1,15 @@
 .knowUs {
-    width: 100vw;
-    position: relative;
-    padding: 2rem 1rem;
+    width: 100%;
+    justify-content: center;
     background-color: #171717;
+    overflow: hidden;
+    padding: 1rem;
     
     .knowUs-image {
-        position: relative;
         padding-bottom: 2rem;
         img {
             height: 34rem;
             width: 22rem;
-            margin-bottom: 2rem;
         }
     }
 
@@ -21,15 +20,15 @@
 
 }
 
-@media (min-width: 768px) {
+@media (min-width: 480px) {
     .knowUs {
         display: flex;
-        gap: 2rem;
+        gap: 1rem;
         justify-content: space-around;
     }
 
     .knowUs-text {
-        padding-top: 6rem;
+        padding-top: 2rem;
         width: 45%;
 
         h2 {
