--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,22 +9,12 @@
 @import '~bootstrap/scss/bootstrap';
 @import url("https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600&display=swap");
 
-
-// body{
-//     font-family: "Titillium Web", sans-serif;
-//     // background-image: url(../img/hero-img.gif);
-//     // background-size: cover;
-//     // background-repeat: no-repeat;
-//     // background-position: center;
-//     width: 100%;
-//     height: 100%;
-//     border: 2px solid red;
-//     margin: 0;
-//     padding: 0;
-// }
- 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+body {
+    background-color:  #171717;
 }
