--- a/src/styles/productCard.scss
+++ b/src/styles/productCard.scss
@@ -1,17 +1,12 @@
 .product-card-container {
-    border: 2px solid green;
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 0.5rem;
     justify-content: center;
-    padding: 2rem;
     .product-card {
-        border: 2px solid red;
-        width: 200px;
-        height: 400px;
-        padding: 12px;
-        background-color: #1e1e1e;
-        color: #fff;
+        width: 185px;
+        height: 285px;
+        color: #ffffff;
         border-radius: 12px;
         overflow: hidden;
     
@@ -23,11 +18,28 @@
     
         .card {
             img {
-                width: auto;
-                height: 200px;
-                // display: block;
+                width: 100%;
+                height: 185px;
                 border-radius: 12px 12px 0 0;
             }
         }
+
+        .details {
+            padding: 0.5rem;
+            
+            p {
+                margin-bottom: 0.5rem;
+            }
+        }
+    }
+}
+
+//Styling for the shop component
+.shop {
+    padding: 2rem 0rem;
+    h2 {
+        color: #ffffff;
+        text-align: center;
+        margin-bottom: 1.5rem;
     }
 }
