--- a/src/styles/productCard.scss
+++ b/src/styles/productCard.scss
@@ -4,8 +4,8 @@
     gap: 0.5rem;
     justify-content: center;
     .product-card {
-        width: 185px;
-        height: 285px;
+        width: 180px;
+        height: 300px;
         color: #ffffff;
         border-radius: 12px;
         overflow: hidden;
@@ -14,6 +14,11 @@
             cursor: pointer;
             transform: translateY(-10px);
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.7);
+
+            .cart-btn {
+                opacity: 1;
+                visibility: visible;
+            }
         }
     
         .card {
@@ -28,7 +33,22 @@
             padding: 0.5rem;
             
             p {
-                margin-bottom: 0.5rem;
+                margin-bottom: 0.1rem;
+            }
+        }
+
+        .cart-btn {
+            display: flex;
+            justify-content: center;
+
+            .btn {
+               width: 100%;
+            }
+
+            @media (min-width: 1208px) {
+                opacity: 0;
+                visibility: hidden;
+                transition: opacity 0.3s ease, visibility 0.3s;
             }
         }
     }
