--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -23,6 +23,11 @@ header {
           align-items: center;
           padding: 0 1rem;
 
+          a {
+            text-decoration: none;
+            color: #ffffff;
+          }
+
           .user {
             cursor: pointer;
             margin-right: 1rem;
