--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,7 +3,7 @@
 @import "./mediaPlayer.scss";
 @import "./navbar.scss";
 @import "./productCard.scss";
-@import "./shop.scss";
+@import "./cart.scss";
 @import "./variables";
 @import 'bootstrap/dist/css/bootstrap.min.css';
 @import '~bootstrap/scss/bootstrap';
