--- a/src/styles/cart.scss
+++ b/src/styles/cart.scss
@@ -17,12 +17,22 @@
     display: flex;
     overflow-y: auto;
 
+    @media (max-width: 768px) {
+      padding-top: 1rem;
+      flex-direction: column;
+    }
+
     .summary {
       width: 30%;
+      border: 2px solid red;
     }
 
     .cart-items-list {
       width: 70%;
+
+      @media (max-width: 768px) {
+        width: 100%;
+      }
 
       .cart-item {
         width: 100%;
@@ -31,12 +41,17 @@
         justify-content: space-around;
         align-items: center;
 
+
         .cart-item-details {
           height: 100%;
           display: flex;
           padding-top: 0.8rem;
           gap: 0.5rem;
           width: 34.66%;
+
+          @media (max-width: 768px) {
+            flex-direction: column;
+          }
 
           img {
             width: 150px;
@@ -55,6 +70,10 @@
           width: 15%;
           display: flex;
           gap: 0.5rem;
+
+          @media (max-width: 768px) {
+            flex-direction: column;
+          }
         }
 
         .cart-item-price {
@@ -62,6 +81,11 @@
           display: flex;
           gap: 2rem;
           font-weight: bold;
+
+          @media (max-width: 768px) {
+            flex-direction: column;
+            gap: 0.5rem;
+          }
         }
       }
     }
