--- a/src/styles/cart.scss
+++ b/src/styles/cart.scss
@@ -15,78 +15,59 @@
     width: 100%;
     height: 100%;
     display: flex;
+    flex-direction: column;
+    padding-top: 1rem;
     overflow-y: auto;
 
-    @media (max-width: 768px) {
-      padding-top: 1rem;
-      flex-direction: column;
-    }
-
     .summary {
-      width: 30%;
-      border: 2px solid red;
+      display:flex;
+      justify-content: center;
+      padding: 1rem 0rem;
+
+      .btn {
+        width: 90%;
+        font-size: 1.5rem;
+        cursor: pointer;
+      }
     }
 
     .cart-items-list {
-      width: 70%;
-
-      @media (max-width: 768px) {
-        width: 100%;
-      }
+      // @media (min-width: 768px) {
+      //   width: 70%;
+      // }
 
       .cart-item {
         width: 100%;
         height: 180px;
         display: flex;
-        justify-content: space-around;
-        align-items: center;
+        flex-direction: column;
+        padding: 1rem;
+
 
 
         .cart-item-details {
-          height: 100%;
           display: flex;
-          padding-top: 0.8rem;
           gap: 0.5rem;
-          width: 34.66%;
-
-          @media (max-width: 768px) {
-            flex-direction: column;
-          }
+          padding-bottom: 1rem;
 
           img {
-            width: 150px;
-            height: 150px;
+            width: 100px;
+            height: 100px;
             object-fit: cover;
             border-radius: 10px;
           }
 
-          .item-title {
-            display: flex;
-            margin-top: 0;
-          }
         }
 
         .cart-item-quantity {
-          width: 15%;
           display: flex;
+          justify-content: space-between;
           gap: 0.5rem;
-
-          @media (max-width: 768px) {
-            flex-direction: column;
-          }
+          // .amount {
+          //   width: 50px;
+          // }
         }
 
-        .cart-item-price {
-          width: 23.33%;
-          display: flex;
-          gap: 2rem;
-          font-weight: bold;
-
-          @media (max-width: 768px) {
-            flex-direction: column;
-            gap: 0.5rem;
-          }
-        }
       }
     }
   }
