--- a/src/styles/productCard.scss
+++ b/src/styles/productCard.scss
@@ -59,7 +59,7 @@
     padding: 2rem 0rem;
     h2 {
         color: #ffffff;
-        text-align: center;
         margin-bottom: 1.5rem;
+        margin-left: 1.5rem;
     }
 }
