Add Events component and enhance MediaPlayer with merchandise display

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,7 @@
 @import "./navbar.scss";
 @import "./productCard.scss";
 @import "./cart.scss";
+@import "./events.scss";
 @import "./variables";
 @import 'bootstrap/dist/css/bootstrap.min.css';
 @import '~bootstrap/scss/bootstrap';
