--- a/src/styles/mediaPlayer.scss
+++ b/src/styles/mediaPlayer.scss
@@ -1,10 +1,31 @@
-.containerMedia {
-    background-color: #171717;
-    .mediaPlayer {
-        background-color:  #171717;
-        padding: 2rem 0rem;
+.mediaContainer {
+    .containerMedia {
+        background-color: #171717;
+        .mediaPlayer {
+            background-color:  #171717;
+            padding: 2rem 1rem;
+        }
+        
     }
-    
+
+    .shop-catalogue {
+        padding: 2rem 1.5rem;
+        display: flex;
+        align-items: center;
+        gap: 1.5rem;
+        overflow-x: scroll;
+        background-color: #ffffff;
+
+        a {
+            color: #171717;
+        }
+
+        .cat-desc{
+            text-align: center;
+            margin-bottom: 0;
+        }
+    }
 }
+
 
 
